Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/USceneComponent.h

	DOTNET_EXPORT auto E_PROP_USceneComponent_ComponentToWorld_GET(USceneComponent* Ptr) { return (INT_PTR)&(Ptr->ComponentToWorld); }
	DOTNET_EXPORT void E_PROP_USceneComponent_ComponentToWorld_SET(USceneComponent* Ptr, INT_PTR Value) { Ptr->ComponentToWorld = *(FTransform*)Value; }
	
	DOTNET_EXPORT auto E_PROP_USceneComponent_ComponentVelocity_GET(USceneComponent* Ptr) { return (INT_PTR)&(Ptr->ComponentVelocity); }
	DOTNET_EXPORT void E_PROP_USceneComponent_ComponentVelocity_SET(USceneComponent* Ptr, INT_PTR Value) { Ptr->ComponentVelocity = *(FVector*)Value; }
	
	DOTNET_EXPORT auto E_PROP_USceneComponent_RelativeLocation_GET(USceneComponent* Ptr) { return (INT_PTR)&(Ptr->RelativeLocation); }
	DOTNET_EXPORT void E_PROP_USceneComponent_RelativeLocation_SET(USceneComponent* Ptr, INT_PTR Value) { Ptr->RelativeLocation = *(FVector*)Value; }
	
	DOTNET_EXPORT auto E_PROP_USceneComponent_RelativeRotation_GET(USceneComponent* Ptr) { return (INT_PTR)&(Ptr->RelativeRotation); }
	DOTNET_EXPORT void E_PROP_USceneComponent_RelativeRotation_SET(USceneComponent* Ptr, INT_PTR Value) { Ptr->RelativeRotation = *(FRotator*)Value; }
	
	DOTNET_EXPORT auto E_PROP_USceneComponent_RelativeScale3D_GET(USceneComponent* Ptr) { return (INT_PTR)&(Ptr->RelativeScale3D); }
	DOTNET_EXPORT void E_PROP_USceneComponent_RelativeScale3D_SET(USceneComponent* Ptr, INT_PTR Value) { Ptr->RelativeScale3D = *(FVector*)Value; }
	
	DOTNET_EXPORT auto E_PROP_USceneComponent_RelativeTranslation_DEPRECATED_GET(USceneComponent* Ptr) { return (INT_PTR)&(Ptr->RelativeTranslation_DEPRECATED); }
	DOTNET_EXPORT void E_PROP_USceneComponent_RelativeTranslation_DEPRECATED_SET(USceneComponent* Ptr, INT_PTR Value) { Ptr->RelativeTranslation_DEPRECATED = *(FVector*)Value; }
	DOTNET_EXPORT auto E_USceneComponent_AreDynamicDataChangesAllowed(USceneComponent* Self, bool bIgnoreStationary)
	{
		auto _p0 = bIgnoreStationary;
		return ((E_PROTECTED_WRAP_USceneComponent*)Self)->AreDynamicDataChangesAllowed_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_USceneComponent_CalcBoundingCylinder(USceneComponent* Self, float CylinderRadius, float CylinderHalfHeight)
	{
		auto _p0 = CylinderRadius;
		auto _p1 = CylinderHalfHeight;
		Self->CalcBoundingCylinder(_p0, _p1);
	}
	DOTNET_EXPORT auto E_USceneComponent_CanEverRender(USceneComponent* Self)
	{
		return Self->CanEverRender();
	}
	DOTNET_EXPORT auto E_USceneComponent_CheckStaticMobilityAndWarn(USceneComponent* Self, char* ActionText)
	{
		auto _p0 = ConvertFromManage_FText(ActionText);
		return ((E_PROTECTED_WRAP_USceneComponent*)Self)->CheckStaticMobilityAndWarn_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_USceneComponent_ConditionalUpdateComponentToWorld(USceneComponent* Self)
	{
		Self->ConditionalUpdateComponentToWorld();
	}
	DOTNET_EXPORT auto E_USceneComponent_DetachFromParent(USceneComponent* Self, bool bMaintainWorldPosition, bool bCallModify)
	{
		auto _p0 = bMaintainWorldPosition;
		auto _p1 = bCallModify;
		Self->DetachFromParent(_p0, _p1);
	}
	DOTNET_EXPORT auto E_USceneComponent_DoesSocketExist(USceneComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return Self->DoesSocketExist(_p0);
	}
	DOTNET_EXPORT auto E_USceneComponent_GetAttachSocketName(USceneComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetAttachSocketName());
	}
	DOTNET_EXPORT auto E_USceneComponent_GetCollisionObjectType(USceneComponent* Self)
	{
		return Self->GetCollisionObjectType();
	}
	DOTNET_EXPORT auto E_USceneComponent_GetCollisionResponseToChannel(USceneComponent* Self, ECollisionChannel Channel)
	{
		auto _p0 = Channel;
		return Self->GetCollisionResponseToChannel(_p0);
	}
	DOTNET_EXPORT auto E_USceneComponent_GetComponentLocation(USceneComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetComponentLocation());
	}
	DOTNET_EXPORT auto E_USceneComponent_GetComponentQuat(USceneComponent* Self)
	{
		return (INT_PTR) new FQuat(Self->GetComponentQuat());
	}
	DOTNET_EXPORT auto E_USceneComponent_GetComponentRotation(USceneComponent* Self)
	{
		return (INT_PTR) new FRotator(Self->GetComponentRotation());
	}
	DOTNET_EXPORT auto E_USceneComponent_GetComponentScale(USceneComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetComponentScale());
	}
	DOTNET_EXPORT auto E_USceneComponent_GetComponentVelocity(USceneComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetComponentVelocity());
	}
	DOTNET_EXPORT auto E_USceneComponent_GetDefaultSceneRootVariableName(USceneComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDefaultSceneRootVariableName());
	}
	DOTNET_EXPORT auto E_USceneComponent_GetForwardVector(USceneComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetForwardVector());
	}
	DOTNET_EXPORT auto E_USceneComponent_GetNumChildrenComponents(USceneComponent* Self)
	{
		return Self->GetNumChildrenComponents();
	}
	DOTNET_EXPORT auto E_USceneComponent_GetRelativeTransform(USceneComponent* Self)
	{
		return (INT_PTR) new FTransform(Self->GetRelativeTransform());
	}
	DOTNET_EXPORT auto E_USceneComponent_GetRightVector(USceneComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetRightVector());
	}
	DOTNET_EXPORT auto E_USceneComponent_GetSocketLocation(USceneComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FVector(Self->GetSocketLocation(_p0));
	}
	DOTNET_EXPORT auto E_USceneComponent_GetSocketQuaternion(USceneComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FQuat(Self->GetSocketQuaternion(_p0));
	}
	DOTNET_EXPORT auto E_USceneComponent_GetSocketRotation(USceneComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FRotator(Self->GetSocketRotation(_p0));
	}
	DOTNET_EXPORT auto E_USceneComponent_ResetRelativeTransform(USceneComponent* Self)
	{
		Self->ResetRelativeTransform();
	}
	DOTNET_EXPORT auto E_USceneComponent_SetAbsolute(USceneComponent* Self, bool bNewAbsoluteLocation, bool bNewAbsoluteRotation, bool bNewAbsoluteScale)
	{
		auto _p0 = bNewAbsoluteLocation;
		auto _p1 = bNewAbsoluteRotation;
		auto _p2 = bNewAbsoluteScale;
		Self->SetAbsolute(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_USceneComponent_SetHiddenInGame(USceneComponent* Self, bool NewHidden, bool bPropagateToChildren)
	{
		auto _p0 = NewHidden;
		auto _p1 = bPropagateToChildren;
		Self->SetHiddenInGame(_p0, _p1);
	}
	DOTNET_EXPORT auto E_USceneComponent_SetRelativeScale3D(USceneComponent* Self, INT_PTR NewScale3D)
	{
		auto _p0 = *(FVector*)NewScale3D;
		Self->SetRelativeScale3D(_p0);
	}
	DOTNET_EXPORT auto E_USceneComponent_SetVisibility(USceneComponent* Self, bool bNewVisibility, bool bPropagateToChildren)
	{
		auto _p0 = bNewVisibility;
		auto _p1 = bPropagateToChildren;
		Self->SetVisibility(_p0, _p1);
	}
	DOTNET_EXPORT auto E_USceneComponent_SetWorldScale3D(USceneComponent* Self, INT_PTR NewScale)
	{
		auto _p0 = *(FVector*)NewScale;
		Self->SetWorldScale3D(_p0);
	}
	DOTNET_EXPORT auto E_USceneComponent_ShouldCollideWhenPlacing(USceneComponent* Self)
	{
		return Self->ShouldCollideWhenPlacing();
	}
	DOTNET_EXPORT auto E_USceneComponent_ShouldComponentAddToScene(USceneComponent* Self)
	{
		return Self->ShouldComponentAddToScene();
	}
	DOTNET_EXPORT auto E_USceneComponent_ShouldRender(USceneComponent* Self)
	{
		return Self->ShouldRender();
	}
	DOTNET_EXPORT auto E_USceneComponent_ToggleVisibility(USceneComponent* Self, bool bPropagateToChildren)
	{
		auto _p0 = bPropagateToChildren;
		Self->ToggleVisibility(_p0);
	}
	DOTNET_EXPORT auto E_USceneComponent_UpdateBounds(USceneComponent* Self)
	{
		Self->UpdateBounds();
	}
	DOTNET_EXPORT auto E_USceneComponent_UpdateChildTransforms(USceneComponent* Self, EUpdateTransformFlags UpdateTransformFlags, ETeleportType Teleport)
	{
		auto _p0 = UpdateTransformFlags;
		auto _p1 = Teleport;
		Self->UpdateChildTransforms(_p0, _p1);
	}
	DOTNET_EXPORT auto E_USceneComponent_UpdateNavigationData(USceneComponent* Self)
	{
		((E_PROTECTED_WRAP_USceneComponent*)Self)->UpdateNavigationData_WRAP();
	}
	DOTNET_EXPORT auto E_USceneComponent_UpdatePhysicsVolume(USceneComponent* Self, bool bTriggerNotifiers)
	{
		auto _p0 = bTriggerNotifiers;
		Self->UpdatePhysicsVolume(_p0);
	}